--- a/index.html
+++ b/index.html
@@ -121,8 +121,9 @@ body {
 
 <div class="navbar">
   <a href="#" class="active">Дом</a>
-  <a href="#">Войти</a>
-  <a href="#">Все Книги</a>
+  <a href="login.php">Войти</a>
+  <a href="register.php">Register</a>
+
 </div>
 
 <div class="row">
