--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@ body {
 <div class="navbar">
   <a href="#" class="active">Дом</a>
   <a href="login.php">Войти</a>
-  <a href="register.php">Register</a>
+  <a href="register.html">Register</a>
+  <a href="logout.php">Logout</a>
 
 </div>
 
